[project @ 2004-07-26 21:12:43 by rlubke] M src/com/sun/faces/RIConstants.java  - Moved constants from RIConstants to ConfigureListener as    these were only used by ConfigureListener  - Removed static methods for setting configuration of     HTML TLV (the methods seemed to go against what     RIConstants was all about).  Variable is now public member.
M src/com/sun/faces/config/ConfigureListener.java
 - added generic method 'isFeatureEnabled' for
   handling of true/false type of context init param
   configuration - removed old related methods.
 - changed relevant single byte Strings to char
 - Moved the repetitious exception processing logic
   from contextInitialized method into the parse() method.
 - Use Util.loadClass() to load classes

M src/com/sun/faces/taglib/html_basic/HtmlBasicValidator.java
 - Changes based on modifications in RIConstants.java

M src/com/sun/faces/util/Util.java
 - Added new messages based on changes in ConfigureListener

M src/javax/faces/Messages.properties
M src/javax/faces/Messages_de.properties
M src/javax/faces/Messages_es.properties
M src/javax/faces/Messages_fr.properties
 - Clarified the existing message regarding invalid context parameter values.    Since this was only used in the true/false config options, state the
   value received, the option name, and the valid values.

M test/com/sun/faces/config/ConfigFileTestCase.java
 - Updated based on changes above.

M test/com/sun/faces/util/TestUtil_messages.java
 - Added new message to test list

Reviewed by: edburns

Original author: rlubke
Date: 2004-07-26 21:12:46+00:00

git-svn-id: https://svn.java.net/svn/mojarra~svn/trunk@2922 761efcf2-d34d-6b61-9145-99dcacc3edf1